--- a/social/styles/globals.css
+++ b/social/styles/globals.css
@@ -38,3 +38,31 @@ a {
   font-family: "Aldrich";
   src: url("../assets/Aldrich/Aldrich-Regular.ttf") format("truetype");
 }
+
+.p-inputtext {
+  border: 3px solid black;
+  box-shadow: none;
+  transition: none;
+}
+
+.p-float-label label {
+  font-weight: 800;
+}
+
+.p-float-label {
+  transition: none;
+  box-shadow: none;
+}
+
+.p-inputtext:hover {
+  box-shadow: none;
+  border: none;
+  border: 3px solid black;
+  transition: none;
+  
+}
+
+.p-inputtext:focus {
+  box-shadow: none;
+  transition: none;
+}
